# MADSci

./: .env.example  .gitignore  .justfile  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Configuration.md  Dockerfile  Dockerfile.dashboard  LICENSE  README.md  TRANSFER_FEATURE_DESIGN.md  Test Node 1.info.yaml  codemeta.json  compose.otel.yaml  compose.yaml  conftest.py  data.json  default.node.info.yaml  default.node.yaml  devbox.json  example_experiment.py  lab.manager.yaml  madsci-entrypoint.sh  manager.yaml  myst.yml  package-lock.json  paper.bib  paper.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  skills.lock.json  test_lab.env  test_optional_location.py  (+2 more)
madsci/madsci_common/: pyproject.toml
madsci/madsci_common/madsci/common/: __init__.py  definition_loaders.py  events.py  exceptions.py  utils.py
madsci/madsci_event_manager/: README.md  pyproject.toml
madsci/madsci_event_manager/madsci/event_manager/: event_server.py
src/madsci_client/: AGENTS.md  README.md  pyproject.toml
src/madsci_client/madsci/client/: __init__.py  client_mixin.py  data_client.py  event_client.py  experiment_application.py  experiment_client.py  http.py  lab_client.py  location_client.py  otel_config.py  otel_processors.py  resource_client.py  structlog_config.py  transfer_client.py  workcell_client.py  workflow_display.py
src/madsci_client/tests/: conftest.py  test_client_context_integration.py  test_client_mixin.py  test_event_client.py  test_event_client_context.py  test_event_client_otel.py  test_event_client_otel_metrics_subprocess.py  test_experiment_client.py  test_http_mixin.py  test_lab_cli.py  test_lab_client.py  test_manager_cli.py  test_minio.py  test_rest_node_client_async.py  test_sila_node_client.py  test_workcell_client.py
src/madsci_client/tests/cli/: __init__.py  test_add.py  test_backup.py  test_campaign_commands.py  test_cli_decorators.py  test_cli_smoke.py  test_completion.py  test_config.py  test_data_browser_helpers.py  test_data_commands.py  test_doctor.py  test_events_commands.py  test_experiment_commands.py  test_formatting.py  test_init.py  test_location_commands.py  test_logs.py  test_logs_client_migration.py  test_migrate.py  test_migrate_apply.py  test_migrate_example_lab.py  test_migrate_foss.py  test_migrate_scanner.py  test_new.py  test_new_tui.py  test_node_commands.py  test_output_enhanced.py  test_registry.py  test_resource_commands.py  test_run.py  test_service_health.py  test_start.py  test_status.py  test_stop.py  test_tui.py  test_tui_screens.py  test_tui_widgets.py  test_validate.py  test_version.py  test_workflow_commands.py  (+1 more)
src/madsci_common/: AGENTS.md  README.md  object_storage_helpers.py  pyproject.toml
src/madsci_common/madsci/common/: __init__.py  context.py  data_manipulation.py  definition_loaders.py  deprecation.py  document_db_migration_tool.py  document_db_version_checker.py  events_csv_exporter.py  exceptions.py  foss_migration.py  http_client.py  manager_base.py  middleware.py  model_loader.py  mongodb_migration_tool.py  mongodb_version_checker.py  nodes.py  object_storage_helpers.py  openapi_utils.py  ownership.py  sentry.py  settings_dir.py  utils.py  validators.py  workflows.py
src/madsci_common/tests/: test_context.py  test_data_manipulation.py  test_decorator_stacking.py  test_definition_auto_write.py  test_deprecation.py  test_error_types.py  test_event_type_coverage.py  test_event_type_descriptions.py  test_foss_migration.py  test_http_client.py  test_local_runner_location.py  test_location_types.py  test_manager_base.py  test_manager_base_otel_runtime_reuse.py  test_manager_context.py  test_middleware.py  test_mongodb_migration_backup_integration.py  test_mongodb_version_checker.py  test_nodeinfo_from_config.py  test_object_storage_helpers.py  test_otel_tracing.py  test_ownership.py  test_pr_review_fixes.py  test_registry_resolution.py  test_secret_classification.py  test_security_regressions.py  test_sentry.py  test_settings_consolidation.py  test_stress.py  test_utils.py  test_validators.py  test_workflow_types.py
src/madsci_common/tests/test_backup_tools/: test_base_backup.py  test_cli.py  test_unified_cli.py
src/madsci_common/tests/test_db_handlers/: __init__.py  conftest.py  test_cache_handler.py  test_document_storage_handler.py  test_minio_handler.py  test_mongo_handler.py  test_object_storage_handler.py  test_postgres_handler.py  (+1 more)
src/madsci_experiment_application/: AGENTS.md  pyproject.toml
src/madsci_experiment_application/tests/: test_experiment_application.py  test_experiment_context.py  test_experiment_modalities.py
src/madsci_experiment_manager/: AGENTS.md  README.md  pyproject.toml  test_experiment.yaml
src/madsci_experiment_manager/tests/: test_experiment_manager.py  test_experiment_migration.py  test_experiment_server.py  test_mongodb_migration.py
src/madsci_location_manager/: AGENTS.md  README.md  pyproject.toml
src/madsci_location_manager/tests/: test_lab_config.py  test_location_client.py  test_location_migration.py  test_location_persistence.py  test_location_reconciliation.py  test_location_schema.py  test_location_seed_formats.py  test_location_server.py  test_location_state_handler.py  test_location_template_server.py  test_location_template_types.py
src/madsci_node_module/: AGENTS.md  README.md  pyproject.toml
src/madsci_node_module/tests/: conftest.py  test_action_parsing_integration.py  test_argument_parsing.py  test_helpers.py  test_intrinsic_location_handler.py  test_location_argument_serialization.py  test_node.py  test_node_infrastructure.py  test_node_registry.py  test_openapi_schema_validation.py  test_openapi_schemas.py  test_optional_location_argument.py  test_rest_functionality.py  test_rest_node_client.py  test_rest_node_module.py  test_rest_utils.py  test_template_handler.py  test_type_analyzer.py
src/madsci_squid/: AGENTS.md  README.md  pyproject.toml
src/madsci_squid/tests/: test_lab_server.py
src/madsci_squid/ui/: components.d.ts  package-lock.json  package.json
(+1459 files in other folders)
