[project]
name = "madsci.client"
version = "0.4.4"
description = "The Modular Autonomous Discovery for Science (MADSci) Python Client and CLI."
authors = [
    {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
    {name = "Ryan D. Lewis", email = "ryan.lewis@anl.gov"},
    {name = "Casey Stone", email = "cstone@anl.gov"},
    {name = "Doga Ozgulbas", email = "dozgulbas@anl.gov"},
]
requires-python = ">=3.9.1"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "madsci.common",
  "click>=8.1.7",
  "trogon>=0.6.0",
  "minio>=7.1.0",

]

[project.urls]
Homepage = "https://github.com/AD-SDL/MADSci"

[project.scripts]
madsci = "madsci.client.cli:root_cli"

######################
# Build Info + Tools #
######################

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["madsci/"]
