[project]
name = "madsci.client"
version = "0.6.2"
description = "The Modular Autonomous Discovery for Science (MADSci) Python Clients."
authors = [
    {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
    {name = "Ryan D. Lewis", email = "ryan.lewis@anl.gov"},
    {name = "Casey Stone", email = "cstone@anl.gov"},
    {name = "Doga Ozgulbas", email = "dozgulbas@anl.gov"},
]
requires-python = ">=3.10.0"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "madsci.common",
  "click>=8.1.7",
  "trogon>=0.6.0",
  "minio>=7.1.0",
  "opentelemetry-api>=1.20.0",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
otel-exporters = [
  "opentelemetry-exporter-otlp>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/AD-SDL/MADSci"


######################
# Build Info + Tools #
######################

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["madsci/"]
