[project]
name = "madsci.common"
dynamic = ["version"]
description = "The Modular Autonomous Discovery for Science (MADSci) Common Definitions and Utilities."
authors = [
    {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
    {name = "Ryan D. Lewis", email = "ryan.lewis@anl.gov"},
    {name = "Casey Stone", email = "cstone@anl.gov"},
    {name = "Doga Ozgulbas", email = "dozgulbas@anl.gov"},
]
requires-python = ">=3.9.1"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.9.2",
    "PyYAML>=6.0.2",
    "sqlmodel>=0.0.22",
    "python-ulid[pydantic]>=3.0.0",
    "aenum>=3.1.15",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pymongo>=4.10.1",
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17"
]

[project.urls]
Homepage = "https://github.com/AD-SDL/MADSci"

######################
# Build Info + Tools #
######################

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"
