[project]
name = "madsci.experiment_manager"
dynamic = ["version"]
description = "The Modular Autonomous Discovery for Science (MADSci) Experiment Manager."
authors = [
    {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
    {name = "Ryan D. Lewis", email = "ryan.lewis@anl.gov"},
    {name = "Casey Stone", email = "cstone@anl.gov"},
    {name = "Doga Ozgulbas", email = "dozgulbas@anl.gov"},
]
requires-python = ">=3.9.1"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "madsci.common"
]

[project.urls]
Homepage = "https://github.com/AD-SDL/MADSci"


######################
# Build Info + Tools #
######################

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-mock-resources[mongo]>=2.12.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.1"

[dependency-groups]
dev = ["-e madsci-common @ file:///${PROJECT_ROOT}/../madsci_common"]
